// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BubbleMessage — theming F6-T3 / F6-T4 > renderiza variant=ai con isLoading=true (typing dots) 1`] = `
<div
  class="flex flex-col gap-1 w-full"
>
  <div
    class="flex items-end justify-start gap-2 w-full"
  >
    <div
      class="theme-transition shadow-xs rounded-lg rounded-bl-sm"
      data-variant="ai"
      style="background-color: var(--mode-bubble-bg-ai); color: var(--mode-on-surface); padding: var(--mode-bubble-padding); max-width: var(--mode-bubble-max-width); border: 1px solid var(--mode-bubble-border-ai);"
    >
      <div
        aria-label="El agente está generando una respuesta"
        aria-live="polite"
        class="flex items-center gap-3 py-1"
        role="status"
      >
        <div
          class="flex items-center gap-1"
        >
          <span
            class="w-2 h-2 rounded-full animate-bounce motion-reduce:animate-none"
            style="background-color: var(--mode-primary); animation-delay: 0ms;"
          />
          <span
            class="w-2 h-2 rounded-full animate-bounce motion-reduce:animate-none"
            style="background-color: var(--mode-primary); animation-delay: 150ms;"
          />
          <span
            class="w-2 h-2 rounded-full animate-bounce motion-reduce:animate-none"
            style="background-color: var(--mode-primary); animation-delay: 300ms;"
          />
        </div>
        <span
          class="text-sm"
          style="color: var(--mode-text-secondary); font-family: var(--mode-font-body);"
        >
          Generando respuesta…
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BubbleMessage — theming F6-T3 / F6-T4 > renderiza variant=user con data-mode=professional (snapshot) 1`] = `
<div
  class="flex flex-col gap-1 w-full"
>
  <div
    class="flex items-end justify-end gap-2 w-full"
  >
    <div
      class="theme-transition shadow-xs rounded-lg rounded-br-sm"
      data-variant="user"
      style="background-color: var(--mode-bubble-bg-user); color: var(--mode-on-surface); padding: var(--mode-bubble-padding); max-width: var(--mode-bubble-max-width);"
    >
      <div
        style="font-family: var(--mode-font-body); line-height: var(--mode-leading-body); font-size: var(--mode-text-body);"
      >
        Hello professional
      </div>
    </div>
  </div>
</div>
`;

exports[`BubbleMessage — theming F6-T3 / F6-T4 > renderiza variant=user con data-mode=tutor (snapshot) 1`] = `
<div
  class="flex flex-col gap-1 w-full"
>
  <div
    class="flex items-end justify-end gap-2 w-full"
  >
    <div
      class="theme-transition shadow-xs rounded-lg rounded-br-sm"
      data-variant="user"
      style="background-color: var(--mode-bubble-bg-user); color: var(--mode-on-surface); padding: var(--mode-bubble-padding); max-width: var(--mode-bubble-max-width);"
    >
      <div
        style="font-family: var(--mode-font-body); line-height: var(--mode-leading-body); font-size: var(--mode-text-body);"
      >
        Hello tutor
      </div>
    </div>
  </div>
</div>
`;
